--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.8",
+    "@reduxjs/toolkit": "^2.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +21,7 @@
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "typescript": "^4.9.5",
+    "uuid": "^11.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
